// cd .\internal\PluginCore\protobuf\
// protoc -I . --go_out=plugins=grpc:. .\plugin.proto

syntax = "proto3";
package PluginCorePB;
option go_package = "../PluginCorePB";

service PluginService{
  rpc PluginRouteRegistered (stream PluginRouteRegisteredRequest) returns (stream PluginRouteRegisteredResponse) {}
}

//插件路由注册请求
message PluginRouteRegisteredRequest {
  string RouterName = 1;
  string RouterNum = 2;
  repeated PluginRouterGroupRequest PluginRouterGroup = 3;
  PluginInfoRequest PluginInfo = 4;
  repeated string  Data = 5;
}

//插件路由注册响应
message PluginRouteRegisteredResponse {
  string Code = 1;
  map<string, string> Data0 = 2;
  repeated  GinParams Data1 = 3;
  repeated string  Data2 = 4;
  string RouterPath = 5;
  string Message = 6;
}

//插件路由组请求
message PluginRouterGroupRequest {
  string RouterPath = 1;
  string RouterMethod = 2;
  string RouterAuthIF = 3;
}

//插件信息请求
message PluginInfoRequest {
  string PluginName = 1;
  string PluginPort = 2;
  string PluginVersion = 3;
}

message GinParams {
  string Key = 1;
  string Value = 2;
}

